[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://joueur.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.573944, 1.83424, 0, 0, 0, 0, 2.54913, 2.82184, 0, 0, 0, 0, 1028.21, 4.36301, 0, 0, 0, 0, 1025.97, 601.238, 0, 0, 0, 0, 0.509094, 603.482, 0, 0, 0, 0, 0.573944, 1.83424 )
}

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="joueur" parent="." instance=ExtResource( 2 )]
position = Vector2( 219.247, 164.929 )

[node name="mobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoreTimer" type="Timer" parent="."]

[node name="startTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="mobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="mobSpawnlocation" type="PathFollow2D" parent="mobPath"]
position = Vector2( 0.573944, 1.83424 )
rotation = 0.215799
[connection signal="hit" from="joueur" to="." method="game_over"]
[connection signal="timeout" from="mobTimer" to="." method="_on_mobTimer_timeout"]
[connection signal="timeout" from="scoreTimer" to="." method="_on_scoreTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
